force-app/main/default/objects/Loan_Application__c/fields/Customer_Annual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Customer_Annual_Salary__c</fullName>
    <label>Customer Annual Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>