force-app/main/default/objects/Loan_Application__c/fields/Estimated_EMI__c.field-meta.xml
<CustomField>
    <fullName>Estimated_EMI__c</fullName>
    <label>Estimated EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>