force-app/main/default/objects/Loan_Application__c/validationRules/Check_Credit_Score.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Credit_Score</fullName>
    <active>true</active>
    <description>Ensures the customer&apos;s credit score is 650 or higher</description>
    <errorConditionFormula>Credit_Score__c &lt; 650</errorConditionFormula>
    <errorMessage>The customer&apos;s credit score must be 650 or higher to proceed with a loan application.</errorMessage>
</ValidationRule>