force-app/main/default/objects/Loan_Application__c/validationRules/Check_Minimum_Salary.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Minimum_Salary</fullName>
    <active>true</active>
    <description>Ensures the customer&apos;s annual salary is at least 500,000 before a loan application can be saved</description>
    <errorConditionFormula>Customer_Annual_Salary__c &lt; 500000</errorConditionFormula>
    <errorMessage>The customer&apos;s annual salary must be 500,000 or greater to create a loan application.</errorMessage>
</ValidationRule>