force-app/main/default/objects/Loan_Application__c/listViews/Credit_Officers_Loan_Application.listView-meta.xml
<ListView>
    <fullName>Credit_Officers_Loan_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Credit Officers</label>
    <queue>Credit_Officers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>