force-app/main/default/objects/Loan_Application__c/listViews/Loan_Managers_Loan_Application.listView-meta.xml
<ListView>
    <fullName>Loan_Managers_Loan_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Loan Managers</label>
    <queue>Loan_Managers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>